# libDB

./: .gitignore  Book.cpp  Book.h  BookMapper.cpp  BookMapper.h  CMakeLists.txt  Copies.cpp  DataBase.cpp  DataBase.h  Readers.cpp  Readers.h  data_dump.sql  main.cpp
src/: DataBase.cpp  DataBase.h  main.cpp  main.txt
src/entities/: Book.cpp  Book.h  Copies.h  Copy.cpp  Copy.h  Date.cpp  Date.h  Publisher.cpp  Publisher.h  Reader.cpp  Reader.h  Theme.cpp  Theme.h  ThemeBook.cpp  ThemeBook.h  Themes.cpp  Themes.h
src/mappers/: BookMapper.cpp  BookMapper.h  CopyMapper.cpp  CopyMapper.h  PublisherMapper.cpp  PublisherMapper.h  ReaderMapper.cpp  ReaderMapper.h  ThemeBookMapper.cpp  ThemeBookMapper.h  ThemeMapper.cpp  ThemeMapper.h
